nohup.out
Traceback (most recent call last):
  File "app.py", line 11, in <module>
    from utils import ring
  File "/home/biscuit/桌面/MyProjects/Alarm/utils.py", line 19, in <module>
    from _entry import *
  File "/home/biscuit/桌面/MyProjects/Alarm/_entry.py", line 18, in <module>
    exec(f"{key}=rd('{path}')")
  File "<string>", line 1, in <module>
  File "/home/biscuit/桌面/MyProjects/Alarm/_entry.py", line 6, in rd
    with open(filepath,"r",encoding=encoding) as f:
FileNotFoundError: [Errno 2] No such file or directory: './.fixed/transbk.qss'
 * Serving Flask app "app" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: on
 * Running on http://localhost:8688/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 128-268-907
127.0.0.1 - - [08/Jul/2020 10:40:19] "[37mPOST /alarm HTTP/1.1[0m" 200 -
WARNING: QApplication was not created in the main() thread.
QObject: Cannot create children for a parent that is in a different thread.
(Parent is QObject(0x7f471f56cf80), parent's thread is QThread(0x7f471400fd20), current thread is AlarmTimer(0x7f470c41cac0)
127.0.0.1 - - [08/Jul/2020 10:40:20] "[37mGET /static/8736.wav HTTP/1.1[0m" 200 -
 * Serving Flask app "app" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: on
 * Running on http://localhost:8688/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 128-268-907
127.0.0.1 - - [08/Jul/2020 11:11:10] "[37mPOST /alarm HTTP/1.1[0m" 200 -
WARNING: QApplication was not created in the main() thread.
QObject: Cannot create children for a parent that is in a different thread.
(Parent is QObject(0x7fdf13a33f80), parent's thread is QThread(0x7fdf0800fd20), current thread is AlarmTimer(0x7fdf00418cf0)
127.0.0.1 - - [08/Jul/2020 11:11:10] "[37mGET /static/8736.wav HTTP/1.1[0m" 200 -
127.0.0.1 - - [08/Jul/2020 12:39:18] "[37mPOST /alarm HTTP/1.1[0m" 200 -
WARNING: QApplication was not created in the main() thread.
QObject: Cannot create children for a parent that is in a different thread.
(Parent is QObject(0x7fdf13a33f80), parent's thread is QThread(0x7fdf0800fd20), current thread is AlarmTimer(0x7fdf00422c70)
127.0.0.1 - - [08/Jul/2020 12:39:19] "[37mGET /static/8736.wav HTTP/1.1[0m" 200 -
 * Detected change in '/home/biscuit/桌面/MyProjects/Alarm/utils.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "/home/biscuit/桌面/MyProjects/Alarm/app.py", line 11, in <module>
    from utils import ring
  File "/home/biscuit/桌面/MyProjects/Alarm/utils.py", line 22
    def 
       ^
SyntaxError: invalid syntax
